--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -455,54 +455,62 @@
 
     let selectedDate = new Date().toLocaleDateString("sv-SE");
 
+
     async function deleteTask(title, date) {
-      const adminEmail = localStorage.getItem("currentAdminEmail");
-      console.log("Deleting task with:", { adminEmail, title, date });
-      if (!adminEmail) {
-        alert("No admin email found.");
+  const adminEmail = localStorage.getItem("currentAdminEmail");
+  console.log("Deleting task with:", { adminEmail, title, date });
+  if (!adminEmail) {
+    alert("No admin email found.");
+    return;
+  }
+  if (!title || !date) {
+    alert("Missing task title or date.");
+    return;
+  }
+
+  const startDate = date.split(" to ")[0];
+  const maxRetries = 2;
+  let attempt = 0;
+
+  while (attempt <= maxRetries) {
+    const controller = new AbortController();
+    const timeoutId = setTimeout(() => controller.abort(), 90000); // 90 seconds timeout
+
+    try {
+      console.log(`Attempt ${attempt + 1} to delete task: adminEmail=${adminEmail}, title=${title}, date=${startDate}`);
+      const response = await fetch(
+        `https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(startDate)}`,
+        {
+          method: "DELETE",
+          headers: { "Content-Type": "application/json" },
+          signal: controller.signal
+        }
+      );
+
+      clearTimeout(timeoutId);
+
+      if (!response.ok) {
+        const errorData = await response.json();
+        throw new Error(`Failed to delete task: ${errorData.error || response.statusText}`);
+      }
+
+      console.log("Task deleted successfully");
+      setTimeout(() => loadTasks(), 500); // Refresh tasks after deletion
+      return;
+    } catch (error) {
+      clearTimeout(timeoutId);
+      attempt++;
+      if (attempt > maxRetries) {
+        console.error("Error deleting task after all retries:", error);
+        alert(`Failed to delete task: ${error.message}`);
         return;
       }
-
-      const startDate = date.split(" to ")[0];
-      const maxRetries = 2;
-      let attempt = 0;
-
-      while (attempt <= maxRetries) {
-        const controller = new AbortController();
-        const timeoutId = setTimeout(() => controller.abort(), 90000);
-
-        try {
-          const response = await fetch(
-            `https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(startDate)}`,
-            {
-              method: "DELETE",
-              headers: { "Content-Type": "application/json" },
-              signal: controller.signal
-            }
-          );
-
-          clearTimeout(timeoutId);
-
-          if (!response.ok) {
-            const errorData = await response.json();
-            throw new Error(`Failed to delete task: ${errorData.error || response.statusText}`);
-          }
-
-          console.log("Task deleted successfully");
-          return true;
-        } catch (error) {
-          clearTimeout(timeoutId);
-          attempt++;
-          if (attempt > maxRetries) {
-            console.error("Error deleting task after retries:", error);
-            alert(`Failed to delete task: ${error.message}`);
-            return false;
-          }
-          console.log(`Retrying delete request (${attempt}/${maxRetries})...`);
-          await new Promise(resolve => setTimeout(resolve, 2000));
-        }
-      }
+      console.log(`Retrying delete request (${attempt}/${maxRetries})...`);
+      await new Promise(resolve => setTimeout(resolve, 2000));
     }
+  }
+}
+
 
     async function loadTasks() {
       try {
@@ -527,10 +535,21 @@
           div.dataset.title = task.title;
           div.dataset.date = task.date;
           div.innerHTML = `
-            <h3 class="task-title">${task.title}</h3>
-            <p><strong>Date:</strong> ${task.date}</p>
-            <button class="delete-btn">Delete Task</button>
-          `;
+  <h3 class="task-title">${task.title}</h3>
+  <p><strong>Date:</strong> ${task.date}</p>
+  <button class="delete-btn" style="background-color: #D32F2F; color: white; padding: 8px 14px; font-weight: bold; border-radius: 6px; border: none; cursor: pointer; margin: 10px 0;">Delete Task</button>
+`;
+div.querySelector(".delete-btn").addEventListener("click", async () => {
+  if (confirm(`Are you sure you want to delete the task "${task.title}"?`)) {
+    try {
+      await deleteTaskFromBackend(task.title, task.date);
+      loadTasks();
+    } catch (err) {
+      console.error("Failed to delete task:", err);
+      alert("Failed to delete task. Please try again.");
+    }
+  }
+});
           container.appendChild(div);
 
           div.querySelector(".delete-btn").addEventListener("click", async () => {
