--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -378,24 +378,27 @@
       <span>Market</span>
     </a>
   </div>
+
+
+
+
   <script>
-    // Dynamically set footer button links and active state
+    // Footer button links and active state
     const urlParams = new URLSearchParams(window.location.search);
     const adminEmail = urlParams.get('admin') || localStorage.getItem('currentAdminEmail') || '';
     const userName = urlParams.get('user') || '';
     const basePath = '/BeeMazing-Y1/mobile/2-UserProfiles';
-
+  
     const homeButton = document.getElementById('homeButton');
     const profileButton = document.getElementById('profileButton');
     const marketButton = document.getElementById('marketButton');
-
+  
     if (adminEmail && userName) {
       homeButton.href = `${basePath}/userAdmin.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
       profileButton.href = `${basePath}/users.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
       marketButton.href = `${basePath}/usermarket.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
     }
-
-    // Set active state
+  
     document.querySelectorAll('.footer a').forEach(link => {
       const currentPath = window.location.pathname.replace(/\/$/, '');
       const linkPath = new URL(link.href, window.location.origin).pathname.replace(/\/$/, '');
@@ -405,113 +408,109 @@
         link.classList.remove('active');
       }
     });
-
+  
     // Side Menu Toggle
     const menuToggle = document.getElementById('menuToggle');
     const sideMenu = document.getElementById('sideMenu');
     const closeMenu = document.getElementById('closeMenu');
     const overlay = document.getElementById('overlay');
     const contentElements = document.querySelectorAll('.date-header, #taskContainer, .footer');
-
+  
     function openMenu() {
       sideMenu.classList.add('open');
       overlay.classList.add('active');
       document.body.classList.add('menu-open');
       contentElements.forEach(el => el.classList.add('content-blur'));
     }
-
+  
     function closeMenuFn() {
       sideMenu.classList.remove('open');
       overlay.classList.remove('active');
       document.body.classList.remove('menu-open');
       contentElements.forEach(el => el.classList.remove('content-blur'));
     }
-
+  
     menuToggle.addEventListener('click', openMenu);
     closeMenu.addEventListener('click', closeMenuFn);
     overlay.addEventListener('click', closeMenuFn);
-
+  
     sideMenu.addEventListener('click', (e) => {
       e.stopPropagation();
     });
-
+  
     const taskSettingsLink = document.getElementById('taskSettingsLink');
     const marketDashLink = document.getElementById('marketDashLink');
     const userManagementLink = document.getElementById('userManagementLink');
     const logoutLink = document.getElementById('logoutLink');
-
+  
     if (adminEmail && userName) {
       taskSettingsLink.href = `/BeeMazing-Y1/mobile/3-Tasks/tasks.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
       marketDashLink.href = `/BeeMazing-Y1/mobile/4-Market/market.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
       userManagementLink.href = `/BeeMazing-Y1/mobile/1-Home/home.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
       logoutLink.href = `/BeeMazing-Y1/login.html`;
     }
-
+  
     logoutLink.addEventListener('click', () => {
       localStorage.removeItem('isAdmin');
       localStorage.removeItem('userData');
       localStorage.removeItem('adminPassword');
     });
-
+  
     let selectedDate = new Date().toLocaleDateString("sv-SE");
-
-
+  
     async function deleteTask(title, date) {
-  const adminEmail = localStorage.getItem("currentAdminEmail");
-  console.log("Deleting task with:", { adminEmail, title, date });
-  if (!adminEmail) {
-    alert("No admin email found.");
-    return;
-  }
-  if (!title || !date) {
-    alert("Missing task title or date.");
-    return;
-  }
-
-  const startDate = date.split(" to ")[0];
-  const maxRetries = 2;
-  let attempt = 0;
-
-  while (attempt <= maxRetries) {
-    const controller = new AbortController();
-    const timeoutId = setTimeout(() => controller.abort(), 90000); // 90 seconds timeout
-
-    try {
-      console.log(`Attempt ${attempt + 1} to delete task: adminEmail=${adminEmail}, title=${title}, date=${startDate}`);
-      const response = await fetch(
-        `https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(startDate)}`,
-        {
-          method: "DELETE",
-          headers: { "Content-Type": "application/json" },
-          signal: controller.signal
+      if (!adminEmail) {
+        alert("No admin email found.");
+        return false;
+      }
+      if (!title || !date) {
+        alert("Missing task title or date.");
+        return false;
+      }
+  
+      const startDate = date.split(" to ")[0];
+      const maxRetries = 2;
+      let attempt = 0;
+  
+      while (attempt <= maxRetries) {
+        const controller = new AbortController();
+        const timeoutId = setTimeout(() => controller.abort(), 90000);
+  
+        try {
+          console.log(`Attempt ${attempt + 1} to delete task: adminEmail=${adminEmail}, title=${title}, date=${startDate}`);
+          const response = await fetch(
+            `https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(startDate)}`,
+            {
+              method: "DELETE",
+              headers: { "Content-Type": "application/json" },
+              signal: controller.signal
+            }
+          );
+  
+          clearTimeout(timeoutId);
+  
+          if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(`Failed to delete task: ${errorData.error || response.statusText}`);
+          }
+  
+          console.log(`Task deleted successfully: ${title}`);
+          return true;
+        } catch (error) {
+          clearTimeout(timeoutId);
+          attempt++;
+          if (attempt > maxRetries) {
+            console.error("Error deleting task after all retries:", error);
+            alert(`Failed to delete task: ${error.message}`);
+            return false;
+          }
+          console.log(`Retrying delete request (${attempt}/${maxRetries})...`);
+          await new Promise(resolve => setTimeout(resolve, 2000));
         }
-      );
-
-      clearTimeout(timeoutId);
-
-      if (!response.ok) {
-        const errorData = await response.json();
-        throw new Error(`Failed to delete task: ${errorData.error || response.statusText}`);
       }
-
-      console.log("Task deleted successfully");
-      setTimeout(() => loadTasks(), 500); // Refresh tasks after deletion
-      return;
-    } catch (error) {
-      clearTimeout(timeoutId);
-      attempt++;
-      if (attempt > maxRetries) {
-        console.error("Error deleting task after all retries:", error);
-        alert(`Failed to delete task: ${error.message}`);
-        return;
-      }
-      console.log(`Retrying delete request (${attempt}/${maxRetries})...`);
-      await new Promise(resolve => setTimeout(resolve, 2000));
+      return false;
     }
-  }
-}
-
-
+  
     async function loadTasks() {
       try {
         const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
@@ -520,38 +519,25 @@
         if (!res.ok) throw new Error(`HTTP error ${res.status}`);
         const { tasks } = await res.json();
         console.log("Tasks received:", tasks.map(t => ({ title: t.title, date: t.date })));
-
+  
         const container = document.getElementById("taskContainer");
         container.innerHTML = "";
-
+  
         if (!tasks || tasks.length === 0) {
           container.innerHTML = "<p>No tasks available.</p>";
           return;
         }
-
+  
         tasks.forEach(task => {
           const div = document.createElement("div");
           div.className = "task-entry";
           div.dataset.title = task.title;
           div.dataset.date = task.date;
           div.innerHTML = `
-  <h3 class="task-title">${task.title}</h3>
-  <p><strong>Date:</strong> ${task.date}</p>
-  <button class="delete-btn" style="background-color: #D32F2F; color: white; padding: 8px 14px; font-weight: bold; border-radius: 6px; border: none; cursor: pointer; margin: 10px 0;">Delete Task</button>
-`;
-div.querySelector(".delete-btn").addEventListener("click", async () => {
-  if (confirm(`Are you sure you want to delete the task "${task.title}"?`)) {
-    try {
-      await deleteTaskFromBackend(task.title, task.date);
-      loadTasks();
-    } catch (err) {
-      console.error("Failed to delete task:", err);
-      alert("Failed to delete task. Please try again.");
-    }
-  }
-});
-          container.appendChild(div);
-
+            <h3 class="task-title">${task.title}</h3>
+            <p><strong>Date:</strong> ${task.date}</p>
+            <button class="delete-btn" style="background-color: #D32F2F; color: white; padding: 8px 14px; font-weight: bold; border-radius: 6px; border: none; cursor: pointer; margin: 10px 0;">Delete Task</button>
+          `;
           div.querySelector(".delete-btn").addEventListener("click", async () => {
             if (confirm(`Are you sure you want to delete the task "${task.title}"?`)) {
               const success = await deleteTask(task.title, task.date);
@@ -560,54 +546,55 @@ div.querySelector(".delete-btn").addEventListener("click", async () => {
               }
             }
           });
+          container.appendChild(div);
         });
       } catch (err) {
         console.error("Error loading tasks:", err);
         document.getElementById("taskContainer").innerHTML = "<p>Error loading tasks. Please try again.</p>";
       }
     }
-
+  
     function generateScrollableDates(monthOffset = 0) {
       const container = document.getElementById("dayScrollContainer");
       container.innerHTML = "";
-
+  
       const today = new Date();
       today.setDate(1);
       today.setMonth(today.getMonth() + monthOffset);
-
+  
       const currentMonth = today.getMonth();
       const currentYear = today.getFullYear();
       const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
-
+  
       document.getElementById("monthLabel").textContent = today.toLocaleDateString(undefined, {
         month: 'long',
         year: 'numeric',
       });
-
+  
       for (let i = 1; i <= daysInMonth; i++) {
         const date = new Date(currentYear, currentMonth, i);
         const btn = document.createElement("div");
         btn.className = "day";
         btn.textContent = i;
         btn.dataset.date = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
-
+  
         btn.addEventListener("click", () => {
           document.querySelectorAll(".day").forEach(d => d.classList.remove("selected"));
           btn.classList.add("selected");
           selectedDate = btn.dataset.date;
           loadTasks();
         });
-
+  
         const todayStr = new Date().toLocaleDateString("sv-SE");
         if (btn.dataset.date === todayStr) {
           btn.classList.add("selected");
           selectedDate = btn.dataset.date;
           loadTasks();
         }
-
+  
         container.appendChild(btn);
       }
-
+  
       setTimeout(() => {
         const selected = document.querySelector(".day.selected");
         if (selected) {
@@ -615,33 +602,38 @@ div.querySelector(".delete-btn").addEventListener("click", async () => {
         }
       }, 50);
     }
-
+  
     let monthOffset = 0;
     document.getElementById("prevMonth").addEventListener("click", () => {
       monthOffset--;
       generateScrollableDates(monthOffset);
     });
-
+  
     document.getElementById("nextMonth").addEventListener("click", () => {
       monthOffset++;
       generateScrollableDates(monthOffset);
     });
-
+  
     document.getElementById("scrollLeft").addEventListener("click", () => {
       document.getElementById("dayScrollContainer").scrollBy({
         left: -200,
         behavior: "smooth"
       });
     });
-
+  
     document.getElementById("scrollRight").addEventListener("click", () => {
       document.getElementById("dayScrollContainer").scrollBy({
         left: 200,
         behavior: "smooth"
       });
     });
-
+  
     generateScrollableDates();
   </script>
+
+
+
+
+
 </body>
 </html>
