--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -683,39 +683,49 @@ body {
         const today = new Date();
         today.setHours(0, 0, 0, 0);
 
-        const visibleTasks = tasks.filter(task => {
-            if (!task.date) return false;
+        
 
-            // Parse the From/To range
-            const range = task.date.split(" to ");
-            const from = parseLocalDate(range[0]);
-            const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
 
-            // Check if the selected date is within the From/To range
-            if (selected < from || selected > to) return false;
 
-            // Handle Specific Dates mode
-            if (task.specificDates) {
-                const specificDates = task.specificDates.split(",").map(date => date.trim());
-                return specificDates.includes(selectedDate);
-            }
 
-            // Handle Specific Days mode
-            if (task.specificDays) {
-                let days = task.specificDays;
-                if (typeof days === "string") {
-                    days = days.split(",").map(d => d.trim()).filter(d => d);
-                }
-                if (Array.isArray(days) && days.length > 0) {
-                    const dayOfWeek = selected.toLocaleDateString(undefined, { weekday: "long" });
-                    return days.includes(dayOfWeek);
-                }
-                return false; // If specificDays is set but invalid or empty, hide the task
-            }
 
-            // Default (From - To mode): Show if within range
-            return true;
-        });
+const visibleTasks = tasks.filter(task => {
+    if (!task.date) return false;
+
+    // Parse the From/To range
+    const range = task.date.split(" to ");
+    const from = parseLocalDate(range[0]);
+    const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
+
+    const inRange = selected >= from && selected <= to;
+
+    // If Specific Dates exist, use that first
+    if (task.specificDates) {
+        const specificDates = task.specificDates.split(",").map(date => date.trim());
+        return specificDates.includes(selectedDate);
+    }
+
+    // If Specific Days exist, use that second
+    if (task.specificDays) {
+        let days = task.specificDays;
+        if (typeof days === "string") {
+            days = days.split(",").map(d => d.trim()).filter(d => d);
+        }
+        if (Array.isArray(days) && days.length > 0) {
+            const dayOfWeek = selected.toLocaleDateString(undefined, { weekday: "long" });
+            return days.includes(dayOfWeek) && inRange; // ✅ Must still be within From-To range
+        }
+    }
+
+    // Default case: From-To
+    return inRange;
+});
+
+
+
+
+
+
 
         if (visibleTasks.length === 0) {
             taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
