--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -31,8 +31,9 @@
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: auto;
 }
+
 
 
 
@@ -509,7 +510,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home</span>
+            <span>Home1</span> <!--whaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-->
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -1356,7 +1357,10 @@ async function finishTask(userName, task, button, selectedDate) {
       taskElement.classList.remove('swiped-left');
       taskElement.style.transform = 'translateX(0)';
     }
-  };
+    
+    moved = false; // ✅ ADD THIS LINE
+};
+
 
   // --- Touch events ---
   taskElement.addEventListener('touchstart', (e) => {
@@ -1383,11 +1387,12 @@ async function finishTask(userName, task, button, selectedDate) {
 
   // --- Prevent accidental popup on swipe ---
   taskElement.addEventListener('click', (e) => {
-    if (moved) {
+    if (isSwiping || moved) {
       e.preventDefault();
       e.stopImmediatePropagation();
     }
-  });
+});
+
 
   // --- Ensure delete button works ---
   const deleteBtn = taskElement.querySelector('.delete-btn');
